src/parsers/parser/NdfGrammarParser.py
# Generated from NdfGrammar.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class NdfGrammarParser ( Parser ):

    grammarFileName = "NdfGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "':'", "'['", "','", "']'", "'<'", 
                     "'>'", "'('", "')'", "'T'", "'.'", "'$'", "'~'", "'/'", 
                     "'|'", "'$/'", "'-'", "'+'", "'*'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "K_TRUE", "K_FALSE", "K_MAP", "K_IS", "K_DIV", "K_NIL", 
                      "K_BOOL", "K_STRING", "K_INT", "K_FLOAT", "K_PAIR", 
                      "K_LIST", "K_EXPORT", "K_PRIVATE", "K_UNNAMED", "K_TEMPLATE", 
                      "K_FLOAT2", "K_FLOAT3", "K_RGBA", "K_GUID", "STRING_SINGLE", 
                      "STRING_DOUBLE", "INT", "FLOAT", "HEX_INT", "GUID", 
                      "ID", "WS", "BLOCK_COMMENT", "LINE_COMMENT" ]

    RULE_ndf_file = 0
    RULE_assignment = 1
    RULE_private_prefix = 2
    RULE_export_prefix = 3
    RULE_template_prefix = 4
    RULE_r_value = 5
    RULE_normal_assignment = 6
    RULE_template_assignment = 7
    RULE_member_assignment = 8
    RULE_unnamed_assignment = 9
    RULE_template_param = 10
    RULE_template_param_list = 11
    RULE_template_param_type = 12
    RULE_numeric_specialization = 13
    RULE_object = 14
    RULE_object_type = 15
    RULE_block = 16
    RULE_object_member = 17
    RULE_id = 18
    RULE_array_access = 19
    RULE_type_label = 20
    RULE_builtin_type_label = 21
    RULE_pair_label = 22
    RULE_list_label = 23
    RULE_map_label = 24
    RULE_template_type = 25
    RULE_type_initialization = 26
    RULE_builtin_type_value = 27
    RULE_primitive_value = 28
    RULE_data_structure_value = 29
    RULE_bool_value = 30
    RULE_nil_value = 31
    RULE_string_value = 32
    RULE_int_value = 33
    RULE_float_value = 34
    RULE_hex_value = 35
    RULE_guid_value = 36
    RULE_special_value = 37
    RULE_rgba_value = 38
    RULE_float2_value = 39
    RULE_float3_value = 40
    RULE_pair_value = 41
    RULE_vector_value = 42
    RULE_map_value = 43
    RULE_pair_element = 44
    RULE_path_element = 45
    RULE_obj_reference_value = 46
    RULE_replace_value = 47
    RULE_arithmetic = 48
    RULE_atom = 49
    RULE_op = 50
    RULE_concatination = 51

    ruleNames =  [ "ndf_file", "assignment", "private_prefix", "export_prefix", 
                   "template_prefix", "r_value", "normal_assignment", "template_assignment", 
                   "member_assignment", "unnamed_assignment", "template_param", 
                   "template_param_list", "template_param_type", "numeric_specialization", 
                   "object", "object_type", "block", "object_member", "id", 
                   "array_access", "type_label", "builtin_type_label", "pair_label", 
                   "list_label", "map_label", "template_type", "type_initialization", 
                   "builtin_type_value", "primitive_value", "data_structure_value", 
                   "bool_value", "nil_value", "string_value", "int_value", 
                   "float_value", "hex_value", "guid_value", "special_value", 
                   "rgba_value", "float2_value", "float3_value", "pair_value", 
                   "vector_value", "map_value", "pair_element", "path_element", 
                   "obj_reference_value", "replace_value", "arithmetic", 
                   "atom", "op", "concatination" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    K_TRUE=20
    K_FALSE=21
    K_MAP=22
    K_IS=23
    K_DIV=24
    K_NIL=25
    K_BOOL=26
    K_STRING=27
    K_INT=28
    K_FLOAT=29
    K_PAIR=30
    K_LIST=31
    K_EXPORT=32
    K_PRIVATE=33
    K_UNNAMED=34
    K_TEMPLATE=35
    K_FLOAT2=36
    K_FLOAT3=37
    K_RGBA=38
    K_GUID=39
    STRING_SINGLE=40
    STRING_DOUBLE=41
    INT=42
    FLOAT=43
    HEX_INT=44
    GUID=45
    ID=46
    WS=47
    BLOCK_COMMENT=48
    LINE_COMMENT=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Ndf_fileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(NdfGrammarParser.EOF, 0)

        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NdfGrammarParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(NdfGrammarParser.AssignmentContext,i)


        def getRuleIndex(self):
            return NdfGrammarParser.RULE_ndf_file

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNdf_file" ):
                listener.enterNdf_file(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNdf_file" ):
                listener.exitNdf_file(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNdf_file" ):
                return visitor.visitNdf_file(self)
            else:
                return visitor.visitChildren(self)




    def ndf_file(self):

        localctx = NdfGrammarParser.Ndf_fileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_ndf_file)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 70433168687104) != 0):
                self.state = 104
                self.assignment()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 110
            self.match(NdfGrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def normal_assignment(self):
            return self.getTypedRuleContext(NdfGrammarParser.Normal_assignmentContext,0)


        def member_assignment(self):
            return self.getTypedRuleContext(NdfGrammarParser.Member_assignmentContext,0)


        def unnamed_assignment(self):
            return self.getTypedRuleContext(NdfGrammarParser.Unnamed_assignmentContext,0)


        def template_assignment(self):
            return self.getTypedRuleContext(NdfGrammarParser.Template_assignmentContext,0)


        def getRuleIndex(self):
            return NdfGrammarParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = NdfGrammarParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_assignment)
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.normal_assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.member_assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 114
                self.unnamed_assignment()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 115
                self.template_assignment()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Private_prefixContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def K_PRIVATE(self):
            return self.getToken(NdfGrammarParser.K_PRIVATE, 0)

        def getRuleIndex(self):
            return NdfGrammarParser.RULE_private_prefix

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrivate_prefix" ):
                listener.enterPrivate_prefix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrivate_prefix" ):
                listener.exitPrivate_prefix(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrivate_prefix" ):
                return visitor.visitPrivate_prefix(self)
            else:
                return visitor.visitChildren(self)




    def private_prefix(self):

        localctx = NdfGrammarParser.Private_prefixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_private_prefix)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(NdfGrammarParser.K_PRIVATE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Export_prefixContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def K_EXPORT(self):
            return self.getToken(NdfGrammarParser.K_EXPORT, 0)

        def getRuleIndex(self):
            return NdfGrammarParser.RULE_export_prefix

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExport_prefix" ):
                listener.enterExport_prefix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExport_prefix" ):
                listener.exitExport_prefix(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExport_prefix" ):
                return visitor.visitExport_prefix(self)
            else:
                return visitor.visitChildren(self)




    def export_prefix(self):

        localctx = NdfGrammarParser.Export_prefixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_export_prefix)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(NdfGrammarParser.K_EXPORT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Template_prefixContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def K_TEMPLATE(self):
            return self.getToken(NdfGrammarParser.K_TEMPLATE, 0)

        def getRuleIndex(self):
            return NdfGrammarParser.RULE_template_prefix

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTemplate_prefix" ):
                listener.enterTemplate_prefix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTemplate_prefix" ):
                listener.exitTemplate_prefix(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTemplate_prefix" ):
                return visitor.visitTemplate_prefix(self)
            else:
                return visitor.visitChildren(self)




    def template_prefix(self):

        localctx = NdfGrammarParser.Template_prefixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_template_prefix)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(NdfGrammarParser.K_TEMPLATE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R_valueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def concatination(self):
            return self.getTypedRuleContext(NdfGrammarParser.ConcatinationContext,0)


        def arithmetic(self):
            return self.getTypedRuleContext(NdfGrammarParser.ArithmeticContext,0)


        def builtin_type_value(self):
            return self.getTypedRuleContext(NdfGrammarParser.Builtin_type_valueContext,0)


        def object_(self):
            return self.getTypedRuleContext(NdfGrammarParser.ObjectContext,0)


        def normal_assignment(self):
            return self.getTypedRuleContext(NdfGrammarParser.Normal_assignmentContext,0)


        def member_assignment(self):
            return self.getTypedRuleContext(NdfGrammarParser.Member_assignmentContext,0)


        def obj_reference_value(self):
            return self.getTypedRuleContext(NdfGrammarParser.Obj_reference_valueContext,0)


        def nil_value(self):
            return self.getTypedRuleContext(NdfGrammarParser.Nil_valueContext,0)


        def special_value(self):
            return self.getTypedRuleContext(NdfGrammarParser.Special_valueContext,0)


        def replace_value(self):
            return self.getTypedRuleContext(NdfGrammarParser.Replace_valueContext,0)


        def type_initialization(self):
            return self.getTypedRuleContext(NdfGrammarParser.Type_initializationContext,0)


        def ID(self):
            return self.getToken(NdfGrammarParser.ID, 0)

        def getRuleIndex(self):
            return NdfGrammarParser.RULE_r_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR_value" ):
                listener.enterR_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR_value" ):
                listener.exitR_value(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitR_value" ):
                return visitor.visitR_value(self)
            else:
                return visitor.visitChildren(self)




    def r_value(self):

        localctx = NdfGrammarParser.R_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_r_value)
        try:
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.concatination()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.arithmetic(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 126
                self.builtin_type_value()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 127
                self.object_()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 128
                self.normal_assignment()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 129
                self.member_assignment()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 130
                self.obj_reference_value(0)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 131
                self.nil_value()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 132
                self.special_value()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 133
                self.replace_value()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 134
                self.type_initialization()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 135
                self.match(NdfGrammarParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Normal_assignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self):
            return self.getTypedRuleContext(NdfGrammarParser.IdContext,0)


        def K_IS(self):
            return self.getToken(NdfGrammarParser.K_IS, 0)

        def r_value(self):
            return self.getTypedRuleContext(NdfGrammarParser.R_valueContext,0)


        def export_prefix(self):
            return self.getTypedRuleContext(NdfGrammarParser.Export_prefixContext,0)


        def private_prefix(self):
            return self.getTypedRuleContext(NdfGrammarParser.Private_prefixContext,0)


        def getRuleIndex(self):
            return NdfGrammarParser.RULE_normal_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNormal_assignment" ):
                listener.enterNormal_assignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNormal_assignment" ):
                listener.exitNormal_assignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNormal_assignment" ):
                return visitor.visitNormal_assignment(self)
            else:
                return visitor.visitChildren(self)




    def normal_assignment(self):

        localctx = NdfGrammarParser.Normal_assignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_normal_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [32]:
                self.state = 138
                self.export_prefix()
                pass
            elif token in [33]:
                self.state = 139
                self.private_prefix()
                pass
            elif token in [46]:
                pass
            else:
                pass
            self.state = 142
            self.id_()
            self.state = 143
            self.match(NdfGrammarParser.K_IS)
            self.state = 144
            self.r_value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Template_assignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def template_prefix(self):
            return self.getTypedRuleContext(NdfGrammarParser.Template_prefixContext,0)


        def id_(self):
            return self.getTypedRuleContext(NdfGrammarParser.IdContext,0)


        def template_param_list(self):
            return self.getTypedRuleContext(NdfGrammarParser.Template_param_listContext,0)


        def K_IS(self):
            return self.getToken(NdfGrammarParser.K_IS, 0)

        def r_value(self):
            return self.getTypedRuleContext(NdfGrammarParser.R_valueContext,0)


        def export_prefix(self):
            return self.getTypedRuleContext(NdfGrammarParser.Export_prefixContext,0)


        def private_prefix(self):
            return self.getTypedRuleContext(NdfGrammarParser.Private_prefixContext,0)


        def getRuleIndex(self):
            return NdfGrammarParser.RULE_template_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTemplate_assignment" ):
                listener.enterTemplate_assignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTemplate_assignment" ):
                listener.exitTemplate_assignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTemplate_assignment" ):
                return visitor.visitTemplate_assignment(self)
            else:
                return visitor.visitChildren(self)




    def template_assignment(self):

        localctx = NdfGrammarParser.Template_assignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_template_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [32]:
                self.state = 146
                self.export_prefix()
                pass
            elif token in [33]:
                self.state = 147
                self.private_prefix()
                pass
            elif token in [35]:
                pass
            else:
                pass
            self.state = 150
            self.template_prefix()
            self.state = 151
            self.id_()
            self.state = 152
            self.template_param_list()
            self.state = 153
            self.match(NdfGrammarParser.K_IS)
            self.state = 154
            self.r_value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Member_assignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self):
            return self.getTypedRuleContext(NdfGrammarParser.IdContext,0)


        def r_value(self):
            return self.getTypedRuleContext(NdfGrammarParser.R_valueContext,0)


        def normal_assignment(self):
            return self.getTypedRuleContext(NdfGrammarParser.Normal_assignmentContext,0)


        def getRuleIndex(self):
            return NdfGrammarParser.RULE_member_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMember_assignment" ):
                listener.enterMember_assignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMember_assignment" ):
                listener.exitMember_assignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMember_assignment" ):
                return visitor.visitMember_assignment(self)
            else:
                return visitor.visitChildren(self)




    def member_assignment(self):

        localctx = NdfGrammarParser.Member_assignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_member_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.id_()
            self.state = 157
            self.match(NdfGrammarParser.T__0)
            self.state = 160
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 158
                self.r_value()
                pass

            elif la_ == 2:
                self.state = 159
                self.normal_assignment()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Unnamed_assignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def K_UNNAMED(self):
            return self.getToken(NdfGrammarParser.K_UNNAMED, 0)

        def r_value(self):
            return self.getTypedRuleContext(NdfGrammarParser.R_valueContext,0)


        def getRuleIndex(self):
            return NdfGrammarParser.RULE_unnamed_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnnamed_assignment" ):
                listener.enterUnnamed_assignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnnamed_assignment" ):
                listener.exitUnnamed_assignment(self)
